add karlo's files

--- a/templates/Item/details.html.twig
+++ b/templates/Item/details.html.twig
@@ -8,6 +8,14 @@
     <table class="table">
         <tbody>
         <tr>
+            <th>Username</th>
+            <td>{{ username }}</td>
+        </tr>
+        <tr>
+            <th>User avatar</th>
+            <td>{{ avatar | raw }}</td>
+        </tr>
+        <tr>
             <th>Picture</th>
             <td><img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
                      alt="{{ item.title }}" width="200px"></td>
