--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@
     margin: 0;
     padding: 0;
     transition-duration: 0.3s;
+
 }
 
 body{
@@ -19,6 +20,8 @@ body{
     margin-top: 80px;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+
 
 .navbar {
     z-index: 9999;
@@ -106,6 +109,68 @@ body{
 .card-img-top {
 
 }
+/* Item details ui, Karlo start, mobile first*/
+.table {
+
+}
+
+#item_detail_buttons {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+}
+#item_detail_buttons button:hover {
+    filter: brightness(130%);
+    border: 1px solid black;
+
+}
+#avatar {
+    margin-left: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    display: flex;
+}
+#avatar img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-right:2rem ;
+
+}
+.btn-success {
+    background-color: #46A18E !important;
+}
+.row img {
+    width: 300px;
+    height: 300px;
+}
+
+/* Tablet */
+@media screen and (min-width:900px) {
+
+    #item_detail_buttons {
+        display: flow;
+        justify-content: center;
+        margin: 1rem;
+        transform: scale(1.1);
+    }
+    #item_detail_buttons button {
+        margin: 1rem;
+    }
+    #description {
+        display: flex;
+        margin: 1rem;
+    }
+    #description img {
+        width: 400px;
+        height: 400px;
+    }
+    .img-thumbnail {
+        border:none;
+    }
+}
+
+/* Item details ui, Karlo end*/
 
 
 
