--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -21,9 +21,11 @@
             </li>
         {% else %}
             <li class="navbar_element {% if app.request.attributes.get('_route') == 'login' %} active {% endif %}">
-                <a class="navbar_link" href="{{ path('login') }}">
+                <button type="button" data-toggle="modal" data-target="#modalLogin">
                     {{ 'NAV.LOGIN'|trans }}
-                </a>
+                       <!--<a class="navbar_link" href="{{ path('login')}}">
+                       </a>-->
+                </button>
             </li>
             <li class="navbar_element {% if app.request.attributes.get('_route') == 'register' %} active {% endif %}">
                 <a class="navbar_link" href="{{ path('register') }}">
