--- a/templates/flash_message.html.twig
+++ b/templates/flash_message.html.twig
@@ -1,3 +1,5 @@
+{% extends 'base.html.twig' %}
+
 {% block flash_messages %}
     {% for type, messages in app.session.flashbag.all() %}
         {% for message in messages %}
