small change in text structure

--- a/templates/About/about.html.twig
+++ b/templates/About/about.html.twig
@@ -12,7 +12,9 @@
         </p>
         <p>
             Most of us are more and more aware about the effects of our purchase habits and communities are demanding for more sustainable ways to answer their needs.
-                    </p>
+        </p>
+
+        <h2>Contact us </h2>
 {#{% include 'Contact/contact.html.twig' %}#}
     {{ form(contactForm) }}
     </article>
