--- a/templates/Item/details.html.twig
+++ b/templates/Item/details.html.twig
@@ -34,6 +34,8 @@
 
     <a href="{{ path('item_edit', {'id': item.id}) }}"><button type="button" class="btn btn-success">Edit</button></a>
 
+       <!-- <a href="{{ path('item_edit', {'id': item.id}) }}"><button type="button" class="btn btn-success">Report</button></a> -->
+
     {{ include('item/delete-confirm.html.twig') }}
     </div>
 {% endblock %}
