--- a/templates/Registration/registration.html.twig
+++ b/templates/Registration/registration.html.twig
@@ -7,8 +7,8 @@
         <div>
             <h1 id="registration_title">{{ 'REGISTRATION.TITLE'|trans }}</h1>
         </div>
-        <form class="registration_form_container">
+        <div class="registration_form_container">
         {{ form(registrationForm) }}
-        </form>
+        </div>
     </div>
 {% endblock %}
