--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,11 +12,13 @@
 body{
     position: relative;
     background-color: white;
-    margin-top: 80px;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-
+#App{
+    max-width: 1200px;
+    margin: 80px auto 100px;
+}
 
 .navbar {
     z-index: 9999;
