--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,17 +37,17 @@ body{
     color: #336655;
     list-style: none;
 }
-.navbar_element {
+.button {
     padding: 2px 18px;
     margin-left: 10px;
-    background-color: #f2f2f2;
     border-radius: 10px;
-    border:1px solid #336655;
     font-size: 16px;
-    }
-.navbar_element:hover {
     background-color: #c9f0e3;
     border:1px solid #c9f0e3;
+    }
+.button:hover {
+    background-color: pink;
+    border:1px solid pink;
 }
 
 .navbar_link {
@@ -58,7 +58,6 @@ body{
 
 .navbar_link:hover {
     text-decoration: none;
-    background-color: #c9f0e3;
     color:#336655;
 }
 
@@ -100,7 +99,6 @@ body{
     width: 100%;
     height: 50px;
     justify-content: center;
-    position: fixed;
     background-color: #f2f2f2;
     box-shadow: 0px -10px 30px -12px rgba(0,0,0,0.75);
 }
