--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -40,3 +40,35 @@
         {% endif %}
     </ul>
 </nav>
+
+<div class="modal fade" id="modalLogin" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="h3 mb-3 font-weight-normal">Please sign in</h3>
+                <label for="inputUsername" class="sr-only" >{{ 'LOGIN.USERNAME.LABEL' | trans }} </label>
+            </div>
+            <form method="post" action="{{ path('login') }}">
+                {% if error|default(false) %}
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
+                <div class="modal-body">
+                    <input type="text" value="{{ last_username|default("") }}" name="username" id="inputUsername" class="form-control"
+                           placeholder="Username" required autofocus><br>
+                    <label for="inputPassword" class="sr-only">{{ 'LOGIN.PASSWORD.LABEL' | trans }}</label>
+                    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-lg btn-primary" type="submit">
+                        {{ 'LOGIN.SUBMIT' | trans }}
+                    </button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
