--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -3,37 +3,37 @@
     <ul class="navbar_list">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
-            <li class="button {% if app.request.attributes.get('_route') == 'add_item' %} active {% endif %}">
-                <a class="navbar_link" href="{{ path('item_new') }}">
+            <li class="{% if app.request.attributes.get('_route') == 'add_item' %} active {% endif %}">
+                <a class="button navbar_link" href="{{ path('item_new') }}">
                     {{ 'NAV.ADD_ITEM'|trans }}
                 </a>
             </li>
 
-            <li class="button">
-                <a class="navbar_link" href="{{ path('app_logout') }}">
+            <li class="">
+                <a class="button navbar_link" href="{{ path('app_logout') }}">
                     {{ 'NAV.LOGOUT'|trans }}
                 </a>
             </li>
-            <li class="button {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
-                <a class="navbar_link" href="{{ path('about')}}">
+            <li class="{% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
+                <a class="button navbar_link" href="{{ path('about')}}">
                     {{ 'NAV.ABOUT'|trans }}
                 </a>
             </li>
         {% else %}
-            <li class="navbar_element {% if app.request.attributes.get('_route') == 'login' %} active {% endif %}">
-                <button type="button" data-toggle="modal" data-target="#modalLogin">
+            <li class="{% if app.request.attributes.get('_route') == 'login' %} active {% endif %}">
+                <a class="button navbar_link"  data-toggle="modal" data-target="#modalLogin"  >
                     {{ 'NAV.LOGIN'|trans }}
                        <!--<a class="navbar_link" href="{{ path('login')}}">
                        </a>-->
-                </button>
+                </a>
             </li>
-            <li class="button {% if app.request.attributes.get('_route') == 'register' %} active {% endif %}">
-                <a class="navbar_link" href="{{ path('register') }}">
+            <li class="{% if app.request.attributes.get('_route') == 'register' %} active {% endif %}">
+                <a class="button navbar_link" href="{{ path('register') }}">
                     {{ 'NAV.REGISTER'|trans }}
                 </a>
             </li>
-            <li class="button {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
-                <a class="navbar_link" href="{{ path('about') }}">
+            <li class="{% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
+                <a class="button navbar_link" href="{{ path('about') }}">
                     {{ 'NAV.ABOUT'|trans }}
                 </a>
             </li>
