add new item ui done

--- a/templates/Item/details.html.twig
+++ b/templates/Item/details.html.twig
@@ -30,7 +30,7 @@
     </article>
 
     <div id="item_detail_buttons">
-    <a href="{{ path('item_index') }}"><button type="button" class="btn btn-success">Back to list</button></a>
+    <a href="{{ path('item_index') }}"><button type="button" class="btn btn-success">Back</button></a>
 
     <a href="{{ path('item_edit', {'id': item.id}) }}"><button type="button" class="btn btn-success">Edit</button></a>
 
