--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,4 @@
-<<<<<<< Updated upstream
 
-=======
->>>>>>> Stashed changes
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -103,7 +100,6 @@ body{
     transform: translateY(-20px);
 }
 
-<<<<<<< Updated upstream
 .card-img-top {
     max-height: 180px;
     object-fit: contain;
@@ -118,7 +114,8 @@ body{
 #item_detail_buttons {
     display: flex;
     justify-content: space-between;
-    margin: 1rem;
+    margin: 0.5rem;
+
 }
 #item_detail_buttons button:hover {
     filter: brightness(130%);
@@ -142,6 +139,8 @@ body{
 .btn-success, .btn-primary {
     background-color: #46A18E !important;
     border: none;
+    border-radius: 5%;
+    padding: 0.45rem;
 }
 .row img {
     width: 300px;
@@ -156,7 +155,6 @@ body{
         display: flow;
         justify-content: center;
         margin: 1rem;
-        transform: scale(1.1);
     }
     #item_detail_buttons button {
         margin: 1rem;
@@ -232,3 +230,28 @@ body{
     justify-content: center;
     max-width: 550px;
 }
+
+/* Add new item ui Karlo*/
+#back_button {
+    margin-left: 0.5rem;
+}
+@media screen and (min-width:800px) {
+    #back_button {
+        display: block;
+        margin-top: 1rem;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;
+
+    }
+    .new_item_page {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        max-width: 950px;
+    }
+}
+
+
+
