--- a/templates/Item/form.html.twig
+++ b/templates/Item/form.html.twig
@@ -1,4 +1,6 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-<button class="btn">{{ button_label|default('Save') }}</button>
+<button id="submit_item_button" class="btn-primary" style="padding:0.5rem">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+
+
