--- a/templates/Item/new.html.twig
+++ b/templates/Item/new.html.twig
@@ -3,9 +3,18 @@
 {% block title %}{{ 'ITEM.NEW.PAGETITLE'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'ITEM.NEW.TITLE'|trans }}</h1>
-
+<div class="new_item_page">
+    <div>
+        <h1 id="registration_title">{{ 'ITEM.NEW.TITLE'|trans }}</h1>
+    </div>
+    <div id="item_detail_buttons">
+    <div class="registration_form_container">
     {{ include('item/form.html.twig', {'button_label': 'Add Item'}) }}
+    </div>
+</div>
+    <a href="{{ path('item_index') }}"><button id="back_button" type="button" class="btn-primary">{{ 'ITEM.NEW.BACKLINK'|trans }}</button></a>
+</div>
 
-    <a href="{{ path('item_index') }}">{{ 'ITEM.NEW.BACKLINK'|trans }}</a>
 {% endblock %}
+
+
