--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,3 +228,10 @@ body{
     justify-content: center;
     max-width: 550px;
 }
+
+.modal-dialog {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) !important;
+}
