--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -62,8 +62,8 @@
 
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                 </div>
-                <div class="modal-footer">
-                    <button class="btn btn-lg btn-primary" type="submit">
+                <div class="justify-content-center modal-footer">
+                    <button class="button" type="submit">
                         {{ 'LOGIN.SUBMIT' | trans }}
                     </button>
                 </div>
