--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,8 @@ body{
 }
 .button {
     padding: 2px 18px;
-    margin-left: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 10px;
     font-size: 16px;
     background-color: #c9f0e3;
@@ -231,7 +232,7 @@ body{
 
 .modal-dialog {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%) !important;
 }
