--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
               crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i,900,900i"
               rel="stylesheet">
-        <link rel="stylesheet" href= {{ asset('css/style.css') }}>
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 
     {% endblock %}
 </head>
