--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,11 +33,11 @@ body{
     top: 0;
     width: 100%;
     height: 50px;
-    justify-content: flex-end;
     display: flex;
     position: fixed;
     background-color: #f2f2f2;
     box-shadow: -2px 10px 30px -12px rgba(0,0,0,0.75);
+
 }
 
 .navbar_list {
@@ -253,5 +253,16 @@ body{
     }
 }
 
+
+/* Adding logo to navbar with help of Filip   */
+#logo  {
+    font-family: 'Catamaran', sans-serif;
+    display: flex;
+    font-size: 20px;
+    align-items: center;
+}
+#logo a:hover {
+    text-decoration: none;
+}
 
 
