--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,12 +18,18 @@
 
 
 body{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    min-height: 100vh;
     position: relative;
     background-color: white;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 #App{
+    /*min-height: 70vh;*/
     max-width: 1200px;
     margin: 80px auto 100px;
 }
@@ -36,8 +42,7 @@ body{
     display: flex;
     position: fixed;
     background-color: #f2f2f2;
-    box-shadow: -2px 10px 30px -12px rgba(0,0,0,0.75);
-
+    box-shadow: -6px 4px 7px -5px rgba(0,0,0,0.75);
 }
 
 .navbar_list {
@@ -88,17 +93,19 @@ body{
     margin: 1rem;
     overflow: hidden;
     border-radius: 0.5rem;
-    -webkit-box-shadow: 0 0 100px 40px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 1px 6px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 1px 6px 0px rgba(166,166,166,1);
     /* card:hover*/
 }
 
 
 .card:hover {
-    -webkit-box-shadow: 0 0 100px 10px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 100px 10px rgba(0, 0, 0, 0.2);
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
+    outline: 5px solid #c9f0e3;
+    
+    /*-webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);*/
+    /*box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);*/
+    /*-webkit-transform: translateY(-5px);*/
+    /*transform: translateY(-5px);*/
 }
 
 .card-img-top {
@@ -190,7 +197,10 @@ body{
     height: 50px;
     justify-content: center;
     background-color: #f2f2f2;
-    box-shadow: 0px -10px 30px -12px rgba(0,0,0,0.75);
+    /*position: relative;*/
+    /*min-height: 100vh;*/
+    /*padding-bottom: 60px; !* Should be equal to the height of your footer *!*/
+    /*box-shadow: 0px -10px 30px -12px rgba(0,0,0,0.75);*/
 }
 
 .footer_elements {
