--- a/templates/Item/form.html.twig
+++ b/templates/Item/form.html.twig
@@ -1,6 +1,9 @@
-{{ form_start(form) }}
+
+{#Use this snippet to create back buttons#}
+
+{# {{ form_start(form) }}
     {{ form_widget(form) }}
-<button id="submit_item_button" class="btn-primary" style="padding:0.5rem">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<button class="button" >{{ button_label|default('Save') }}</button>
+{{ form_end(form) }} #}
 
 
