--- a/templates/Item/edit.html.twig
+++ b/templates/Item/edit.html.twig
@@ -1,13 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Item{% endblock %}
+{% block title %}{{ 'ITEM.EDIT.PAGETITLE'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Item</h1>
+    <div class="new_item_page">
+        <div>
+            <h1 id="registration_title">{{ 'ITEM.NEW.TITLE'|trans }}</h1>
+        </div>
+        <div id="item_detail_buttons">
+            <div class="registration_form_container">
+                {{ include('item/form.html.twig', {'button_label': 'Add Item'}) }}
+            </div>
+        </div>
 
-    {{ include('item/form.html.twig', {'button_label': 'Update'}) }}
+    </div>
+    <div>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
 
-    <a href="{{ path('item_index') }}">back to list</a>
-
-    {{ include('item/delete-confirm.html.twig') }}
+    </div>
+    <div id="add_item_buttons" class="d-flex justify-content-between">
+        <a href="{{ path('item_index') }}">
+            <button type="button" class="button">{{ 'ITEM.NEW.BACKLINK'|trans }}</button>
+        </a>
+        <button class="button">{{ button_label|default('Save') }}</button>
+    </div>
+    {{ form_end(form) }}
 {% endblock %}
