--- a/templates/Item/details.html.twig
+++ b/templates/Item/details.html.twig
@@ -33,11 +33,19 @@
     <a href="{{ path('item_index') }}"><button type="button" class="btn btn-success">Back</button></a>
 
     <a href="{{ path('item_edit', {'id': item.id}) }}"><button type="button" class="btn btn-success">Edit</button></a>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
-    <a href="{{ path('item_swap', {'id': item.id}) }}"><button type="button" class="btn btn-primary">LetzSwap!</button></a>
+        <a href="{{ path('item_swap', {'id': item.id}) }}"><button type="button" class="btn btn-primary">LetzSwap!</button></a>
 
-    <a href="{{ path('item_report', {'id': item.id}) }}"><button type="button" class="btn btn-danger">Report</button></a>
+        {% else %}
+
+            <a href="{{ path('register', {'id': item.id}) }}"><button type="button" class="btn btn-primary">LetzSwap!</button></a>
+
+        {% endif %}
+
+        <a href="{{ path('item_report', {'id': item.id}) }}"><button type="button" class="btn btn-danger">Report</button></a>
 
     {{ include('item/delete-confirm.html.twig') }}
     </div>
+
 {% endblock %}
