--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,17 +3,32 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-
-        <form method="post">
+    <form method="post" class="login_page">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
 
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="inputUsername" class="sr-only">{{ 'LOGIN.USERNAME.LABEL' | trans }}</label>
+        <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control"
+               placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">{{ 'LOGIN.PASSWORD.LABEL' | trans }}</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-    <div class="container">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-        <!-- Modal -->
 
-    </div>
+            <!--Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html-->
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Remember me
+                </label>
+            </div>
 
+
+        <button class="btn btn-lg btn-primary" type="submit">
+            {{ 'LOGIN.SUBMIT' | trans }}
+        </button>
+    </form>
 {% endblock %}
