--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ body{
 
 .navbar_list {
     top: 0;
-    margin: 0;
+    margin-bottom: 9px;
     padding: 0;
     display: flex;
     flex-direction: row;
@@ -281,10 +281,19 @@ body{
     font-size: 20px;
     align-items: center;
 }
+#logo h2 {
+    font-weight: bold;
+}
+#logo a {
+    color: #5ff03f;
+}
+
 #logo a:hover {
     text-decoration: none;
 }
-
+#nav_username {
+    margin-right: 2rem;
+}
 
 
 .modal-dialog {
